# Pico-Chess-Queens

./: CMakeLists.txt  Pico-Chess-Queens.c  Pico-Chess-Queens.uf2  README.md
